--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <option value="4">Santa Catarina</option> 
             <option value="5">Rio Grande do Sul</option> 
         </select>
-
+        <textarea name="feedback"></textarea>
         <br>
         <input type="checkbox" name="novidades" checked>Aceito receber novidades.
     
