--- a/index.html
+++ b/index.html
@@ -21,13 +21,15 @@
             <option value="1">Acre</option> 
             <option value="2">Parana</option> 
             <option value="3">Tocantins</option> 
-            <option value="4">Santa Catarina</option> 
-            <option value="5">Rio Grande do Sul</option> 
+            <option value="4">Santa Catarina</option>
         </select>
+        <br>
         <textarea name="feedback"></textarea>
         <br>
         <input type="checkbox" name="novidades" checked>Aceito receber novidades.
-    
+        <br>
+        <button type="submit">Enviar</button>
+        <button type="reset">Apagar</button>
     </form>    
     </body>
 </html>
