--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <form action="" method="post">
+    <form action="https://formspree.io/f/xblrybkd" method="post">
         <p>Digite seu nome:</p>
         <input type="text" name="name" placeholder="Samuel">
         <br> 
@@ -31,5 +31,5 @@
         <button type="submit">Enviar</button>
         <button type="reset">Apagar</button>
     </form>    
-    </body>
+</body>
 </html>
